fix: resolve bugs